# mjt-http-template

./: Cargo.toml  Dockerfile  build.rs  cargo-generate.toml  post-script.rhai  readme.MD
proto/: TestService.proto
src/: lib.rs  main.rs  settings.rs
src/app_ctx/: app_ctx.rs
src/db_repositories/test_data/: mod.rs  models.rs  test_data_repository.rs
src/grpc_client/: mod.rs  test_service_client.rs
src/http/: builder.rs
src/http/controllers/: mod.rs
src/http/controllers/test_controller/: contracts.rs  mod.rs  test_controller.rs
src/sb/: mod.rs  utils.rs
src/sb/test_event/: mod.rs  test_event_listener.rs  test_event_sb_contract.rs
