[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
my-http-server = { tag = "0.3.0", git = "https://github.com/MyJetTools/my-http-server.git", features = [
    "my-telemetry",
] }
my-http-server-controllers = { tag = "0.3.0", git = "https://github.com/MyJetTools/my-http-server-controllers.git" }
my-http-server-swagger = { tag = "0.3.0", git = "https://github.com/MyJetTools/my-http-server-swagger.git" }

http-is-alive-shared = { tag = "0.3.0", git = "https://github.com/MyJetTools/http-is-alive-shared.git" }
is-alive-middleware = { tag = "0.3.0", git = "https://github.com/ReachPay/is-alive-middleware.git" }

{% if is_use_grpc_client and is_use_telemetry %}
my-grpc-extensions = { tag = "0.1.0", git = "https://github.com/MyJetTools/my-grpc-extensions.git" }
{% endif %}

my-logger = { tag = "0.2.0", git = "https://github.com/MyJetTools/my-logger.git" }
{% if is_seq_enabled %}
my-seq-logger = { tag = "0.2.1", git = "https://github.com/MyJetTools/my-seq-logger.git" }
{% endif %}
rust-extensions = { tag = "0.1.2", git = "https://github.com/MyJetTools/rust-extensions.git" }
{% if is_use_psql %}
my-postgres-macros = { tag = "0.2.2", git = "https://github.com/MyJetTools/my-postgres-macros.git" }
my-postgres = { tag = "0.2.4", git = "https://github.com/MyJetTools/my-postgres.git", features = [
    "with-tls",
    "with-logs-and-telemetry",
] }
tokio-postgres = { version = "*", features = ["with-chrono-0_4"] }
{% endif %}

{% if is_use_sb != "no" %}
my-service-bus-tcp-client = { tag = "0.1.7", git = "https://github.com/MyJetTools/my-service-bus-tcp-client.git" }
my-service-bus-shared = { tag = "0.2.4", git = "https://github.com/MyJetTools/my-service-bus-shared.git" }
{% endif %}

my-settings-reader = { tag = "0.1.5", git = "https://github.com/MyJetTools/my-settings-reader.git", features = [
    "background-reader",
] }
flurl = { tag = "0.2.3", git = "https://github.com/MyJetTools/fl-url.git" }
{% if is_use_nosql != "no" %}
my-no-sql-server-abstractions = { tag = "0.1.0", git = "https://github.com/MyJetTools/my-no-sql-server-abstractions.git" }
{% endif %}
{% if is_use_nosql == "both" %}
my-no-sql-data-writer = { tag = "0.1.5", git = "https://github.com/MyJetTools/my-no-sql-data-writer.git" }
my-no-sql-tcp-reader = { tag = "0.1.7", git = "https://github.com/MyJetTools/my-no-sql-tcp-reader" }
{% endif %}
{% if is_use_nosql == "writer" %}
my-no-sql-data-writer = { tag = "0.1.5", git = "https://github.com/MyJetTools/my-no-sql-data-writer.git" }
{% endif %}
{% if is_use_nosql == "reader" %}
my-no-sql-tcp-reader = { tag = "0.1.7", git = "https://github.com/MyJetTools/my-no-sql-tcp-reader" }
{% endif %}
{% if is_use_telemetry %}
my-telemetry = { tag = "0.2.2", git = "https://github.com/MyJetTools/my-telemetry.git" }
my-telemetry-writer = { tag = "0.1.3", git = "https://github.com/MyJetTools/my-telemetry-writer.git" }
{% endif %}
tonic = { version = "*", features = ["tls", "tls-roots", "prost"] }
tokio = { version = "*", features = ["full"] }
async-trait = "*"
prost = "*"
prost-types = "*"
serde = "*"
serde_yaml = "*"
serde_json = "*"
{% if is_use_psql %}
serde_postgres = "*"
tokio-pg-mapper = "*"
tokio-pg-mapper-derive = "*"{% endif %}

[build-dependencies]
tonic-build = { version = "*", features = ["prost"] }
